--- a/styles/utils/_container.scss
+++ b/styles/utils/_container.scss
@@ -1,7 +1,14 @@
 :root {
   --container-width: #{$container-width};
   --container-width-large: #{$container-width-large};
-  --container-padding: #{$container-padding};
+  --container-padding: #{$container-padding-small};
+
+  @include md-size() {
+    --container-padding: #{$container-padding-medium};
+  }
+  @include lg-size() {
+    --container-padding: #{$container-padding-large};
+  }
 }
 
 .container {
