--- a/styles/themes/main.scss
+++ b/styles/themes/main.scss
@@ -7,7 +7,8 @@
 body {
   overflow-x: hidden;
   min-height: 100vh;
-  background-color: $bg-primary;
+  background-color: var(--bg-color);
+  overflow-wrap: break-word;
 }
 
 .body-is-fixed {
@@ -20,43 +21,3 @@ nav,
 .nav {
   background-color: $bg-secondary;
 }
-
-// .hero {
-//   --image: url(../../assets/images/bg-dark-a.jpg);
-//   --image-position: center top;
-
-//   position: relative;
-//   min-height: 700px;
-
-//   &::before {
-//     content: '';
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background: var(--image) no-repeat var(--image-position);
-//     background-size: cover;
-//     z-index: -1;
-//   }
-
-//   &__flex {
-//     --image: url(../../assets/images/bg-dark-a2.jpg);
-//     --image-position: center 54%;
-//   }
-
-//   &__color {
-//     --image: url(../../assets/images/color-bg-b.jpg);
-//     --image-position: center bottom;
-//   }
-
-//   &__images {
-//     --image: url(../../assets/images/color-bg-a.jpg);
-//     --image-position: center top;
-//   }
-
-//   &__inputs {
-//     --image: url(../../assets/images/b.jpg);
-//     --image-position: center 75%;
-//   }
-// }
