--- a/styles/utils/_flex.scss
+++ b/styles/utils/_flex.scss
@@ -5,6 +5,9 @@
   @each $flex-titles, $values2 in $values1 {
     @each $flex-spec, $flex-val in $values2 {
       .#{$flex-titles}-#{$flex-spec} {
+        @if ($flex-titles == 'flex-gap') {
+          --flex-gap-offset: #{calc($flex-val / 2)};
+        }
         #{$flex-prop-target}: $flex-val;
       }
     }
@@ -13,7 +16,7 @@
 
 @for $i from 1 to 11 {
   .flex-#{$i} {
-    flex: $i;
+    flex-grow: $i;
   }
 }
 
@@ -26,6 +29,9 @@
       @each $flex-titles, $values2 in $values1 {
         @each $flex-spec, $flex-val in $values2 {
           .#{$flex-titles}-#{$bp}-#{$flex-spec} {
+            @if ($flex-titles == 'flex-gap') {
+              --flex-gap-offset: #{calc($flex-val / 2)};
+            }
             #{$flex-prop-target}: $flex-val;
           }
         }
