--- a/styles/utils/index.scss
+++ b/styles/utils/index.scss
@@ -4,6 +4,7 @@
 @import './display';
 @import './flex';
 @import './misc';
+@import './overflow';
 @import './positioning';
 @import './shapes';
 @import './spacing';
