--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,17 +4,14 @@
 
 @import './reset/reset';
 
+@import './vendors/';
+
 @import './base/images';
 @import './base/typography';
 
 @import './utils/';
 
-// ----------new component---------
-@import './components/inputs';
-@import './components/buttons';
-@import './components/cards';
-@import './components/links';
-@import './components/nav';
+@import './components/';
 
 @import './themes/transitions.scss';
 @import './themes/main.scss';
