--- a/styles/components/_links.scss
+++ b/styles/components/_links.scss
@@ -1,6 +1,8 @@
 .link {
+  $line-width: 100%;
+
   --line-height: 1px;
-  --line-width: 100%;
+  --line-width: #{$line-width};
 
   color: var(--text-color);
   text-decoration: none;
@@ -35,6 +37,10 @@
     transform: translate(-50%, 5px);
     height: var(--line-height);
     width: var(--line-width);
-    transition: width 200ms ease-in-out;
+    transition: width 200ms ease-in-out, transform 200ms ease-in-out;
+  }
+
+  &:hover {
+    --line-width: #{calc($line-width + 25%)};
   }
 }
