--- a/styles/components/index.scss
+++ b/styles/components/index.scss
@@ -1,6 +1,7 @@
 @import './buttons';
-@import './cards';
+@import './card';
 @import './inputs';
 @import './links';
 @import './masonry-gallery';
 @import './nav';
+@import './shader';
