--- a/styles/utils/index.scss
+++ b/styles/utils/index.scss
@@ -3,6 +3,7 @@
 @import './container';
 @import './display';
 @import './flex';
+@import './fonts';
 @import './misc';
 @import './overflow';
 @import './positioning';
