--- a/styles/utils/_misc.scss
+++ b/styles/utils/_misc.scss
@@ -4,3 +4,12 @@
   }
 }
 
+// Apply to elements that should only be visable to screen readers
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
