--- a/styles/components/_links.scss
+++ b/styles/components/_links.scss
@@ -40,7 +40,7 @@
     transition: width 200ms ease-in-out, transform 200ms ease-in-out;
   }
 
-  &:hover {
+  :not(.link__active):hover {
     --line-width: #{calc($line-width + 25%)};
   }
 }
