--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,12 +6,10 @@
 
 @import './vendors/';
 
-@import './base/images';
-@import './base/typography';
+@import './base/';
 
 @import './utils/';
 
 @import './components/';
 
-@import './themes/transitions.scss';
 @import './themes/main.scss';
