Add code snipets / Sanity config

--- a/styles/abstract/_variables.scss
+++ b/styles/abstract/_variables.scss
@@ -125,6 +125,7 @@ $container-padding-large: $space-xl;
 
 $transparent: #00000000;
 $transparent-partial: #0000005e;
+$black: #000000;
 $white: #eeeeee;
 $violet: #473198;
 $midnight: #161032;
