--- a/styles/themes/_main.scss
+++ b/styles/themes/_main.scss
@@ -21,3 +21,14 @@ nav,
 .nav {
   background-color: $bg-secondary;
 }
+
+code {
+  display: block;
+  font-family: 'Orbitron', sans-serif;
+  --text-base-size: var(--text-xs-size);
+  --base-line-height: calc(var(--text-base-size) * var(--line-height-ratio));
+  font-size: var(--text-base-size);
+  line-height: var(--base-line-height);
+  padding: $space-md $space-xl $space-md $space-md;
+  background-color: $black;
+}
