Update image gallery

--- a/styles/abstract/_variables.scss
+++ b/styles/abstract/_variables.scss
@@ -115,8 +115,7 @@ $allDirections: ('left', 'right', 'top', 'bottom');
 
 $container-width: 1320px;
 $container-width-large: 1520px;
-$container-padding-small: $space-sm;
-$container-padding-medium: $space-md;
+$container-padding-small: $space-md;
 $container-padding-large: $space-xl;
 
 // **************************************************
