--- a/styles/components/_inputs.scss
+++ b/styles/components/_inputs.scss
@@ -19,7 +19,7 @@ input {
 
   --label-font-size: calc(var(--input-font-size) / 2);
   --label-underline-width: 0%;
-  --lable-border-width: 0px;
+  --label-border-width: 0px;
   --label-padding-x: #{$space-sm};
   --label-padding-y: 1px;
 
@@ -53,7 +53,7 @@ input {
     transform: translate(var(--left-offset), -47%);
     z-index: 0;
     font-weight: 300;
-    border: var(--lable-border-width) solid var(--border-color);
+    border: var(--label-border-width) solid var(--border-color);
     border-radius: $border-radius;
     line-height: calc(var(--label-font-size) * $line-height-ratio);
     transition: border-width 50ms ease-in-out, padding 50ms ease-in-out;
