--- a/styles/components/_select.scss
+++ b/styles/components/_select.scss
@@ -2,7 +2,7 @@
   --select-height: #{$space-md};
   --select-padding-x: #{$space-md};
   --select-padding-y: #{$space-sm};
-  --select-font-size: var(--text-base-size);
+  --select-font-size: var(--base-font-size);
 
   --label-font-size: var(--select-font-size);
   --label-underline-width: 0%;
