--- a/styles/components/_inputs.scss
+++ b/styles/components/_inputs.scss
@@ -12,7 +12,7 @@ input {
   --border-color: var(--text-color);
 
   --input-width: 25rem;
-  --input-font-size: calc(var(--text-base-size) * 1.125);
+  --input-font-size: calc(var(--base-font-size) * 1.125);
   --input-height: calc(var(--input-font-size) * 2.4444);
   --input-border-width: 1px;
   --input-placeholder-color: var(--text-color);
