--- a/styles/components/index.scss
+++ b/styles/components/index.scss
@@ -1,5 +1,6 @@
 @import './buttons';
 @import './card';
+@import './calendar';
 @import './inputs';
 @import './links';
 @import './masonry-gallery';
