--- a/styles/sass_framework/utils/index.scss
+++ b/styles/sass_framework/utils/index.scss
@@ -3,12 +3,11 @@
 @import './container';
 @import './display';
 @import './flex';
-@import './fonts';
 @import './misc';
 @import './overflow';
 @import './positioning';
 @import './shapes';
 @import './spacing';
 @import './text';
-@import './width';
+@import './width-height';
 @import './z-index';
