--- a/styles/sass_framework/abstract/_mixins.scss
+++ b/styles/sass_framework/abstract/_mixins.scss
@@ -38,17 +38,27 @@
 
 //  * Generate a responsive css variable
 //  *
-//  * @param {SASS Map} must be a sass map containing keys of sm, md, lg, xl
-//  * @param {text} the css variable, --css-var
-//  * @param {any} optional, the default value, will set value for xs devices
+//  * @param {text} $var-to-update: the css variable, --css-var
+//  * @param {SASS Map} $map: must be a sass map containing keys of sm, md, lg, xl
+//  * @param {any} $starting-val: optional, the default value, will set value for xs devices
 //  */
 @mixin make-responsive-var($var-to-update, $map, $starting-val: null) {
   @if ($starting-val) {
     #{$var-to-update}: $starting-val;
+  } @else if (map-has-key($map, 'md')) {
+    $val: map.get($map, 'md');
+    #{$var-to-update}: #{$val};
+  } @else if (map-has-key($map, 'lg')) {
+    $val: map.get($map, 'lg');
+    #{$var-to-update}: #{$val};
   }
 
-  @each $key, $bp in $breakpoints {
-    // Get header mods by key of breakpoints
+  $break-points-in-map: map.keys($map);
+  // this requires the map to container
+  // keys equal to the either (sm, md, lg, or ,xl)
+
+  @each $key /* = sm, md, lg, xl */ in $break-points-in-map {
+    $bp: map.get($breakpoints, $key); // Get bp by key
     $val: map.get($map, $key);
 
     @include respond-to($bp) {
@@ -59,9 +69,9 @@
 
 //  * Generate a css class with responsive classes
 //  *
-//  * @param {SASS Map} must be a sass map containing only values
-//  * @param {text} the name of the class to output
-//  * @param {text} the css property to effect
+//  * @param {SASS Map} $map: must be a sass map containing only values
+//  * @param {text} $class: the name of the class to output
+//  * @param {text} $property: the css property to effect
 //  */
 @mixin class-with-responsive-val-only($map, $class, $property) {
   @each $val in $map {
@@ -80,8 +90,11 @@
 
 //  * Generate a css class with responsive classes using key and value from map
 //  *
-//  * @param {SASS Map} must be a sass map containing key value pairs
-//  * @param {text} the css property to effect
+//  * @param {SASS Map} $map: must be a sass map containing key value pairs
+//  * @param {text} $class: the css property to effect
+//  * @param {text} $property: the css property to effect
+//  * @param {boolean} $calc-value: toggle for using calcualted value, must be paired with `$var-name`
+//  * @param {CSS var} $var-name: A css var to use for calculating the output value
 //  */
 @mixin class-with-responsive-key-and-val(
   $map,
