--- a/styles/sass_framework/components/_calendar.scss
+++ b/styles/sass_framework/components/_calendar.scss
@@ -1,4 +1,46 @@
+/**************************
+MIXINS
+***************************/
+@mixin selected-bg() {
+  content: '';
+  position: absolute;
+  width: var(--calendar-selected-width);
+  height: var(--calendar-selected-range-height);
+  background-color: var(--calendar-selected-range-day-bg-color);
+  top: 50%;
+  transform: translate(0%, -50%);
+
+  z-index: -1;
+}
+
+@mixin selected-extend-gradient($dir: left, $pos: start) {
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    background: var(--calender-gradient-#{$dir});
+    #{$dir}: 0;
+    transform: translate(if($dir==left, -100%, 100%), 0);
+    width: calc(
+      (
+        var(--calender-#{$pos}-of-month-length) * var(--calender-day-width) +
+          (var(--calender-day-border-width) * 2)
+      )
+    );
+    height: calc(
+      var(--calendar-selected-range-height) +
+        (var(--calender-day-border-width) * 2)
+    );
+    z-index: -1;
+  }
+}
+
 .calendar {
+  $selected-height: 85%;
+
+  --calendar-number-of-calendars: 1;
+
   --calendar-vertical-rows: 6;
   --calendar-days-ratio: calc(7 / var(--calendar-vertical-rows));
 
@@ -6,7 +48,12 @@
   --calendar-input-height: calc(var(--calendar-height) / 12);
 
   // Calendar
-  --calendar-calendar-padding: #{$space-md};
+  --calendar-calendar-padding: #{$space-xl};
+  --calendar-calendar-padding-top: #{$space-xl};
+  --calendar-calendar-padding-bottom: #{$space-xl};
+  --calendar-calendar-padding-left: #{$space-xl};
+  --calendar-calendar-padding-right: #{$space-xl};
+
   --calendar-calendar-height: calc(
     var(--calendar-height) - var(--calendar-input-height)
   );
@@ -41,19 +88,27 @@
     var(--calendar-height) - var(--calendar-input-height) -
       var(--calendar-year-height) - var(--calendar-year-padding-y) -
       (var(--calendar-year-margin-y) * 2) - var(--calendar-days-names-height) -
-      (var(--calendar-calendar-padding) * 2)
+      var(--calendar-calendar-padding-top) -
+      var(--calendar-calendar-padding-bottom)
   );
 
   // Day
   --calendar-day-height: calc(
     var(--calendar-days-wrapper-height) / var(--calendar-vertical-rows)
   );
+  --calender-day-width: var(--calendar-day-height);
   --calendar-day-font-size: 1.8rem;
+  --calender-day-border-width: 0px;
 
   // Calculate calendar width to keep days blocks are perfect squares
   --calendar-width: calc(
-    (var(--calendar-days-wrapper-height) * var(--calendar-days-ratio)) +
-      (var(--calendar-calendar-padding) * 2)
+    (
+      (var(--calendar-days-wrapper-height) * var(--calendar-days-ratio)) +
+        (
+          var(--calendar-calendar-padding-top) +
+            var(--calendar-calendar-padding-bottom)
+        ) * var(--calendar-number-of-calendars)
+    )
   );
 
   // Selected Day
@@ -61,8 +116,20 @@
 
   // Selected Range
   --calendar-selected-range-day-bg-color: var(--bg-midnight-60);
-  --calendar-selected-range-height: 85%;
+  --calendar-selected-range-height: #{$selected-height};
   --calendar-selected-width: 0%;
+
+  // Gradients
+  --calender-gradient-left: linear-gradient(
+    90deg,
+    var(--bg-lake) 0%,
+    var(--calendar-selected-range-day-bg-color) 50%
+  );
+  --calender-gradient-right: linear-gradient(
+    90deg,
+    var(--calendar-selected-range-day-bg-color) 50%,
+    var(--bg-lake) 100%
+  );
 
   height: var(--calendar-height);
   width: var(--calendar-width);
@@ -91,7 +158,15 @@
     width: 100%;
 
     @extend .bg-lake; // TODO Update Colors
-    padding: $space-md;
+    padding-top: var(--calendar-calendar-padding-top);
+    padding-bottom: var(--calendar-calendar-padding-bottom);
+    padding-left: var(--calendar-calendar-padding-left);
+    padding-right: var(--calendar-calendar-padding-right);
+    display: flex;
+    gap: $space-md;
+  }
+
+  &__calendar-conainer {
   }
 
   // Calendar-header
@@ -184,7 +259,6 @@
 
   &__day {
     --calender-day-border-color: #{$black};
-    --calender-day-border-width: 0px;
 
     width: 100%;
     height: 100%;
@@ -195,43 +269,90 @@
     border: var(--calender-day-border-width) solid
       var(--calender-day-border-color);
 
-    &:hover:not(.is-disabled) {
+    &:hover:not(.is-disabled):not(.selected) {
       --calender-day-border-width: 1px;
+
+      &:not(.in-selected-range) {
+        background-color: $lake;
+
+        &:not(.days-are-selected):not(.in-selected-range) {
+          &::before {
+            @include selected-bg();
+            left: 0;
+          }
+
+          // For the hover state on weekend end gradient width
+          &.hovered-end-weekend-end {
+            &::before {
+              width: 75%;
+              left: -25;
+            }
+          }
+        }
+      }
     }
 
     &.is-disabled {
       pointer-events: none;
     }
 
+    // Handle extended gradient at start and end of monts
+    &--month-start {
+      &.selected-before,
+      &.in-selected-range //! Only works if hover and selected are the same style
+      {
+        @include selected-extend-gradient(left, start);
+      }
+    }
+
+    // Handle extended gradient at start and end of monts
+    &--month-end {
+      &.selected-after,
+      &.in-selected-range //! Only works if hover and selected are the same style
+      {
+        @include selected-extend-gradient(right, end);
+      }
+    }
+
     &.selected {
       background-color: var(--calendar-selected-day-bg-color);
     }
 
-    &.selected-start-day {
-      &::before {
-        content: '';
-        position: absolute;
-        width: var(--calendar-selected-width);
-        height: var(--calendar-selected-range-height);
-        background-color: var(--calendar-selected-range-day-bg-color);
-        right: 0;
-        top: 50%;
-        transform: translate(0, -50%);
-        z-index: -1;
-      }
+    &.selected-days-are-same {
+      --calender-day-border-width: 2px;
+      --calender-day-border-color: #{$violet};
     }
 
-    &.selected-end-day {
-      &::before {
-        content: '';
-        position: absolute;
-        width: var(--calendar-selected-width);
-        height: var(--calendar-selected-range-height);
-        background-color: var(--calendar-selected-range-day-bg-color);
-        left: 0;
-        top: 50%;
-        transform: translate(0, -50%);
-        z-index: -1;
+    &:not(.selected-days-are-same) {
+      &.selected-start-day {
+        &::before {
+          @include selected-bg();
+          right: 0;
+        }
+        // TODO set up weekend selected variables
+        &.calendar__day--weekend--start {
+          &.end-date-is-hovered,
+          &.days-are-selected {
+            &::before {
+              width: 75%;
+              transform: translate(25%, -50%);
+            }
+          }
+        }
+      }
+
+      &.selected-end-day {
+        &::before {
+          @include selected-bg();
+          left: 0;
+        }
+        // TODO set up weekend selected variables
+        &.calendar__day--weekend--end {
+          &::before {
+            width: 75%;
+            transform: translate(0, -50%);
+          }
+        }
       }
     }
 
@@ -239,67 +360,49 @@
       &::before {
         content: '';
         position: absolute;
-        width: 100%;
+        width: calc(100% + (var(--calender-day-border-width) * 2));
         height: var(--calendar-selected-range-height);
         background-color: var(--calendar-selected-range-day-bg-color);
-        left: 0;
+        left: calc(var(--calender-day-border-width) * -1);
         top: 50%;
         transform: translate(0, -50%);
         z-index: -1;
       }
+
+      // ? Override day height to avoid height chagne on hover,
+      // ? cannot set on all __day selectors
+      // TODO See about avoiding this line with a var?
+      &.calendar__day--month-start,
+      &.calendar__day--month-end {
+        &::before {
+          height: calc(
+            var(--calendar-selected-range-height) +
+              (var(--calender-day-border-width) * 2)
+          );
+        }
+      }
     }
 
     // Handle Weekend Selections
-    &--weekend-start {
-      &.in-selected-range {
-        &::before {
-          width: 125%;
-          left: -25%;
-
-          background: linear-gradient(
-            90deg,
-            var(--bg-lake) 0%,
-            var(--calendar-selected-range-day-bg-color) 50%
-          );
+    &--weekend {
+      &--start {
+        &.in-selected-range,
+        &.selected-start-day {
+          &::before {
+            width: 125%;
+            background: var(--calender-gradient-right);
+          }
         }
       }
-      &.selected-end-day {
-        &::before {
-          width: 75%;
-          left: -25%;
-
-          background: linear-gradient(
-            90deg,
-            var(--bg-lake) 0%,
-            var(--calendar-selected-range-day-bg-color) 50%
-          );
-        }
-      }
-    }
-    &--weekend-end {
-      &.in-selected-range {
-        &::before {
-          width: 125%;
-          left: 0%;
-
-          background: linear-gradient(
-            90deg,
-            var(--calendar-selected-range-day-bg-color) 50%,
-            var(--bg-lake) 100%
-          );
-        }
-      }
-
-      &.selected-start-day {
-        &::before {
-          width: 75%;
-          right: -25%;
-
-          background: linear-gradient(
-            90deg,
-            var(--calendar-selected-range-day-bg-color) 50%,
-            var(--bg-lake) 100%
-          );
+      &--end {
+        &.in-selected-range,
+        &.selected-end-day,
+        &.hovered-end-weekend-end:not(.selected-start-day) {
+          &::before {
+            width: 125%;
+            left: -25%;
+            background: var(--calender-gradient-left);
+          }
         }
       }
     }
