--- a/styles/sass_framework/components/_links.scss
+++ b/styles/sass_framework/components/_links.scss
@@ -3,8 +3,9 @@
 
   --line-height: 1px;
   --line-width: #{$line-width};
+  --link-color: var(--text-color);
 
-  color: var(--text-color);
+  color: var(--link-color);
   text-decoration: none;
   position: relative;
   transition: text-shadow 200ms ease-in-out;
@@ -18,23 +19,26 @@
     }
   }
 
-  &__active {
+  &--active {
     --line-height: 2px;
     --line-width: 100%;
   }
 
-  &__no-underline {
+  &--no-underline {
     --line-height: 0px;
   }
 
-  &::after {
+  &--clear {
+    --link-color: var(--text-color);
+  }
+
+  &:not(.link--clear)::after {
     content: '';
     display: block;
     position: absolute;
     bottom: 0;
-    left: 50%;
-    background-color: var(--text-color);
-    transform: translate(-50%, 5px);
+    left: 0;
+    background-color: var(--link-color);
     height: var(--line-height);
     width: var(--line-width);
     transition: width 200ms ease-in-out, transform 200ms ease-in-out;
