--- a/styles/sass_framework/utils/index.scss
+++ b/styles/sass_framework/utils/index.scss
@@ -1,5 +1,5 @@
 @import './border';
-@import './colors';
+@import './color-theming';
 @import './container';
 @import './display';
 @import './flex';
