--- a/styles/app/themes/_main.scss
+++ b/styles/app/themes/_main.scss
@@ -12,6 +12,7 @@ body {
   overflow-x: hidden;
   min-height: 100vh;
   background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 .body-is-fixed {
